# falcon_fetch

./: Dockerfile  README.md  docker-compose.yaml
falcon_cam/: CMakeLists.txt  package.xml
falcon_cam/config/: camera.yaml
falcon_cam/launch/: usb_cam.launch
falcon_cam/scripts/: camera.py
falcon_cam/src/: video_recorder.cpp
falcon_drivers/: CMakeLists.txt  package.xml
falcon_drivers/include/: test.py
falcon_drivers/launch/: imu.launch  motor_driver.launch
falcon_drivers/scripts/falcon_drivers/rpi_serial/: bno055_simpletest.py  imu.py  main.py  motor_driver.py  motor_driver_speed.py  motor_driver_test.py  test.py  testbed_motor_driver.py  testbed_motor_driver_test.py
falcon_drivers/src/: .initial_orientation_wit.cpp.swp  initial_orientation.cpp  initial_orientation_uwb.cpp  initial_orientation_wit.cpp  rpy_check.cpp
falcon_fetch/: CMakeLists.txt  package.xml
falcon_prog/: CMakeLists.txt  package.xml
falcon_prog/include/falcon_prog/: state_machine.h  states.h
falcon_prog/launch/: .main.launch.swp  beacon.launch  drivers.launch  main.launch
falcon_prog/rviz/: falcon.rviz
falcon_prog/src/: .main.cpp.swp  main.cpp  states.cpp
falcon_prog/waypoints/: test_0.csv  test_1.csv  test_2.csv  test_3.csv
marvelmind_nav/src/: subscriber_test.cpp
setup_files/: 72-falcon-i2c.rules
wit_node/: CMakeLists.txt  package.xml
wit_node/launch/: wit.launch
wit_node/src/ros/: CMakeLists.txt  rpy_check.cpp  wit_ros.cpp
