<?xml version="1.0"?>
<package format="2">
  <name>falcon_fetch</name>
  <version>0.0.0</version>
  <description>The falcon_fetch package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
